[tool.poetry]
name = "bib2toml"
version = "0.0.0"
description = ""
authors = ["Gilad Kutiel <gilad.kutiel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pybtex = "^0.24.0"
bibtexparser = "^1.4.2"
setuptools = "^75.6.0"
toml = "^0.10.2"
cattrs = "^24.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
